--- a/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
@@ -174,7 +174,7 @@
                     <select name="idSubCat" id="idSubCat" data-val="true" class="form-control col-lg-2">
 
                         <option value="">Subcategorias</option>
-                        @if (ViewBag.idSubCat != null)
+                        @if (ViewBag.idCategoria != null)
                         {
                             int idsubcat = ViewBag.idSubCat;
                             int idPadre = ViewBag.idCategoria;
