--- a/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
@@ -1,8 +1,10 @@
 ﻿@using WebApplication4.Models
 @model ExtrasModel
 @{
-
+   
 }
+
+
 <div class="tab-pane fade in container" id="extras">
     @using (Html.BeginForm("ExtrasEvento", "Evento", FormMethod.Post))
     {
@@ -79,8 +81,20 @@
                     @Html.LabelFor(m => m.ImageEvento, new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ImageEvento, new { type = "file", @class = "form-control" })
+                        @if (Model.ImageEvento != null)
+                        {
+                            <div>Ya existe Evento cargado</div>
+                            //MODIFICAR
+                        } 
                         @Html.ValidationMessageFor(model => model.ImageEvento)
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group">
+                    @Html.LabelFor(m => m.esDestacado, new { @class = "control-label col-md-2" })
+                    @Html.CheckBoxFor(m => m.esDestacado)
                 </div>
             </div>
             <div class="row">
@@ -88,15 +102,26 @@
                     @Html.LabelFor(m => m.ImageDestacado, new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ImageDestacado, new { type = "file", @class = "form-control" })
+                        @if (Model.ImageDestacado!=null)
+                        {
+                            <div>Ya existen Destacado cargados</div>
+                            //MODIFICAR
+                        } 
                         @Html.ValidationMessageFor(model => model.ImageDestacado)
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="form-group">
                     @Html.LabelFor(m => m.ImageSitios, new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ImageSitios, new { type = "file", @class = "form-control" })
+                        @if (Model.ImageSitios != null)
+                        {
+                            <div>Ya existen sitios cargados</div>
+                            //MODIFICAR
+                        } 
                         @Html.ValidationMessageFor(model => model.ImageSitios)
                     </div>
                 </div>
