--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -62,7 +62,9 @@
                                     <li><a href="@Url.Action("BuscarReservas", "CuentaUsuario")">Buscar reserva</a></li>
                                     <li><a href="devolucion_entradas.html">Devolución</a></li>
                                     <li class="divider"></li>
+                                    
                                     <li><a href="@Url.Action("BuscaCliente", "CuentaUsuario")">Buscar cliente</a></li>
+                                    <li><a href="@Url.Action("RegistrarUsuarioVendedor", "CuentaUsuario")">Registrar Cliente</a></li>
                                     <li class="divider"></li>
                                     <li><a href="@Url.Action("ReporteDia", "Ventas")">Reporte de ventas</a></li>
                                     <li><a href="@Url.Action("Apertura", "Ventas")">Apertura de caja</a></li>
