--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -56,6 +56,7 @@
                                 <li><a href="@Url.Action("Devolucion", "Ventas")">Devolución</a></li>
                                 <li class="divider"></li>
                                 <li><a href="@Url.Action("BuscaCliente", "CuentaUsuario")">Buscar cliente</a></li>
+                                <li><a href="@Url.Action("RegistrarUsuarioVendedor", "CuentaUsuario")">Registrar Cliente</a></li>
                                 <li class="divider"></li>
                                 <li><a href="@Url.Action("ReporteDia", "Ventas")">Reporte de ventas</a></li>
                                 <li><a href="@Url.Action("Apertura", "Ventas")">Apertura de caja</a></li>
