registrar cliente por vendedor - falta corregir

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/RegistrarUsuarioVendedor.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/RegistrarUsuarioVendedor.cshtml
@@ -14,40 +14,49 @@
 </div>
 @using (Html.BeginForm("RegistrarUsuarioVendedor", "CuentaUsuario", FormMethod.Post))
 {
-    <div class="col-md-8">
-        <div class="row form-group">
-            @Html.LabelFor(c => c.Nombres  , new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.Nombres, new {  @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.Nombres)
+    <div class="container">
+        <div class="col-md-8">
+            <div class="row form-group">
+                @Html.LabelFor(c => c.Nombres, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.Nombres, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.Nombres)
+                </div>
             </div>
-        </div>
-        <div class="row form-group">
-            @Html.LabelFor(c => c.Apellidos, new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.Apellidos, new { @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.Apellidos)
+            <div class="row form-group">
+                @Html.LabelFor(c => c.Apellidos, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.Apellidos, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.Apellidos)
+                </div>
             </div>
-        </div>
-        <div class="row form-group">
-            @Html.LabelFor(c => c.Correo, new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.Correo, new {  @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.Correo)
+            <div class="row form-group">
+                @Html.LabelFor(c => c.Correo, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.Correo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.Correo)
+                </div>
             </div>
-        </div>
-        <div class="row form-group">
-            @Html.LabelFor(c => c.Dni, new { @class = "control-label col-md-3" })
-            <div class="col-md-8">
-                @Html.TextBoxFor(c => c.Dni, new { @class = "form-control" })
-                @Html.ValidationMessageFor(c => c.Dni)
+            <div class="form-group">
+                @Html.LabelFor(model => model.TipoDoc, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.TipoDoc)
+                    @Html.ValidationMessageFor(model => model.TipoDoc)
+                </div>
             </div>
-        </div>
+            <div class="row form-group">
+                @Html.LabelFor(c => c.Dni, new { @class = "control-label col-md-3" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(c => c.Dni, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(c => c.Dni)
+                </div>
+            </div>
 
 
-        <div class="row" style="text-align: center">
-            <button style="button" class="btn btn-primary">Aceptar </button>
-            <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
+            <div class="row" style="text-align: center">
+                <button style="button" class="btn btn-primary">Aceptar </button>
+                <a href="@Url.Action("MiCuenta","CuentaUsuario")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
+            </div>
         </div>
     </div>
 }
