--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
@@ -72,7 +72,7 @@
                                        }
                                     <td>@db.Eventos.Find(fu.codEvento).nombre</td>
                                     <td>@fu.fecha.Value.ToString("dd/MM/yyyy")</td>
-                                    <td>@fu.horaIni.Value.TimeOfDay - @fu.horaFin.Value.TimeOfDay</td>
+                                    <td>@fu.horaIni.Value.TimeOfDay</td>
                                     <td>@row.cantEntradas</td>
                                     <td>@row.total</td>
                                     <td><a href="@Url.Action("DeleteReserva", "CuentaUsuario", new { codE = row.codVen, codF = row.codFuncion })" class="btn btn-primary">Borrar <span class="glyphicon glyphicon-remove"></span></a></td>
