--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaReserva.cshtml
@@ -70,17 +70,17 @@
                     </tr>
                 </thead>
                 <tbody id="tbody">
-                    @if (listaReserva!= null)
+                    @if (listaReserva != null)
                     {
                         foreach (var row in listaReserva)
                         {
                             <tr id=@row.codVen onclick="myFunction(this)">
                                 <td>@row.codVen</td>
                                 @{
-                                    Ventas ve=db.Ventas.Find(row.codVen);
-                                    Funcion fu=db.Funcion.Find(row.codFuncion);
+                            Ventas ve = db.Ventas.Find(row.codVen);
+                            Funcion fu = db.Funcion.Find(row.codFuncion);
                                 }
-                                <td>@db.CuentaUsuario.Find(ve.cliente).nombre</td>
+                                <td>@db.CuentaUsuario.Find(ve.cliente).nombre @db.CuentaUsuario.Find(ve.cliente).apellido</td>
                                 <td>@ve.codDoc</td>
                                 <td>@db.Eventos.Find(fu.codEvento).nombre</td>
                                 <td>@row.cantEntradas</td>
