--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -73,6 +73,7 @@
                                 <li><a href="@Url.Action("Politicas", "CuentaUsuario")">Políticas de la empresa</a></li>
                                 <li><a href="@Url.Action("Index", "TipoDeCambio")">Tipo de cambio</a></li>
                                 <li><a href="@Url.Action("Pago", "Ventas")">Registrar pagos</a></li>
+                                <li><a href="@Url.Action("PagoOrganizador", "Ventas")">Registrar pagos del Organizador</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
