--- a/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="tab-pane fade in container" id="extras">
-    @using (Html.BeginForm("ExtrasEvento", "Evento", FormMethod.Post))
+    @using (Html.BeginForm("ExtrasEvento", "Evento", FormMethod.Post,new { enctype = "multipart/form-data" }))
     {
         <div class="container">
             <br>
@@ -81,7 +81,7 @@
                     @Html.LabelFor(m => m.ImageEvento, new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ImageEvento, new { type = "file", @class = "form-control" })
-                        @if (Model.ImageEvento != null)
+                        @if (Model.IEvento!=null)
                         {
                             <div>Ya existe Evento cargado</div>
                             //MODIFICAR
@@ -102,7 +102,7 @@
                     @Html.LabelFor(m => m.ImageDestacado, new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ImageDestacado, new { type = "file", @class = "form-control" })
-                        @if (Model.ImageDestacado!=null)
+                        @if (Model.IDestacado!=null)
                         {
                             <div>Ya existen Destacado cargados</div>
                             //MODIFICAR
@@ -117,7 +117,7 @@
                     @Html.LabelFor(m => m.ImageSitios, new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         @Html.TextBoxFor(m => m.ImageSitios, new { type = "file", @class = "form-control" })
-                        @if (Model.ImageSitios != null)
+                        @if (Model.ISitios!=null)
                         {
                             <div>Ya existen sitios cargados</div>
                             //MODIFICAR
